# crm-plus

./: .env  .env.example  .gitignore  .railway-redeploy-v7  .railwayignore  ANGARIACAO_UX_IMPROVEMENTS 2.md  API_INTEGRATION_REPORT.md  AUDITORIA_BACKOFFICE.md  AUDITORIA_MOBILE_GAPS_FUNCIONALIDADES.md  AUDITORIA_MOBILE_PREVIEW_COMPLETA.md  AUDITORIA_RESPONSIVIDADE_MOBILE.md  BACKEND_ANALISE_HANDOFF_FRONTEND.md  BACKEND_API_AUDIT.md  BACKEND_DEV_TEAM_ENTREGA_FINAL 2.md  BACKEND_FASE_2_INTEGRACOES_ESSENCIAIS.md  BACKEND_FRONTEND_INTEGRATION_ANALYSIS.md  BACKEND_MOBILE_FINAL_REPORT.md  BACKEND_RESPONSE_TO_FRONTEND.md  BACKEND_SQLALCHEMY_RELATIONSHIP_BUG.md  BACKEND_STATUS_VISITS.md  BACKOFFICE_DEPLOY.md  BACKOFFICE_REMOTE_ACCESS.md  BRANCH_DEPLOY.md  CLOUDFLARE_SETUP.md  COMUNICADO_FRONTEND_SITE_MONTRA.md  CONFIRMACAO_BACKEND_SEED_VALIDADO.md  DASHBOARD_ADMIN_COMPLETO.md  DASHBOARD_FIX_PROPERTY_COUNT.md  DASHBOARD_METRICS_FIX.md  DASHBOARD_REDESIGN.md  DEPLOYMENT_GUIDE_AUTH.md  DEPLOY_COMPLETO.md  DEV_TEAM_ACTION_VIDEOS.md  DEV_TEAM_DIRECTIVES_COMPLETED.md  DIAGNOSTICO_AGENTES_SITE_VS_BACKOFFICE.md  DIRETRIZES_DEV_TEAM_BACKOFFICE_SEO.md  DOMAIN_CONFIG.md  Dockerfile  ENTREGA_DASHBOARD_AGENTE.md  FFMPEG_RAILWAY_SETUP.md  (+74 more)
backend/: .env.example  .gitignore  .railway-deploy  .railway-rebuild  .railway-redeploy  Dockerfile  RAILWAY_DEPLOY_CHECKLIST.md  README.md  WATERMARK_SETUP.md  add_agent_photo_column.sql  add_missing_agents.py  alembic.ini  apply_site_preferences_migration.py  apply_tasks_migration_railway.py  assign_agents_to_properties.py  audit_and_populate.py  audit_properties.py  clean_old_media_urls.py  cloudinary_remove_backgrounds_permanent.py  compare_databases.py  fix_agent_assignments_from_csv.py  fix_agent_ids_by_reference.py  fix_agent_ids_correct.py  fix_agent_ids_sql.py  fix_agent_references.py  fix_assignments_from_csv.py  fix_cloudinary_avatars_background.py  fix_property_status.py  fix_references.py  fix_status_uppercase.py  generate_password_hashes.py  init_db.py  (+32 more)
(+550 files in other folders)
