[project]
name = "crm-plus-backend"
version = "0.1.0"
description = "CRM PLUS FastAPI backend service"
requires-python = ">=3.11"
authors = ["CRM PLUS Team <engineering@crmplus.example>"]
dependencies = [
    "fastapi~=0.115",
    "uvicorn[standard]~=0.30",
    "pydantic-settings~=2.3",
    "sqlalchemy~=2.0",
    "psycopg[binary]~=3.2",
    "alembic~=1.13",
    "redis~=5.0",
    "python-jose[cryptography]~=3.3",
    "passlib[bcrypt]~=1.7",
    "httpx~=0.27",
    "email-validator~=2.2",
    "pytest~=8.3"
]

[project.optional-dependencies]
dev = ["pytest-asyncio~=0.23", "ruff~=0.6"]

[tool.uv]
index-url = "https://pypi.org/simple"

description = "CRM PLUS FastAPI backend service"
authors = ["CRM PLUS Team <engineering@crmplus.example>"]
build-backend = "setuptools.build_meta"
