[tool.poetry]
name = "crm-plus-backend"
version = "1.0.0"
description = "Backend API para o CRM PLUS: sistema modular imobiliário inteligente."
authors = ["tvindima <github@tvindima.pt>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = "*"
sqlalchemy = "*"
pydantic = "*"
pytest = "*"
python-multipart = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
