[project]
name = "crm-plus-backend"
version = "1.0.0"
description = "Backend API para o CRM PLUS: sistema modular imobiliário inteligente."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "sqlalchemy",
    "uvicorn[standard]",
    "pytest",
    "pydantic[email]",
    "python-multipart",
    "PyJWT",
    "httpx",
    "aiosqlite",
    "pymongo",
    "python-dotenv",
    "pandas",
    "psycopg2-binary",
    "bcrypt>=4.0.1",
    "Pillow>=10.0.0",
    "cloudinary>=1.36.0"
]

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
